<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/ivResto"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@color/colorGray"
                    android:scaleType="fitXY"/>
            <TextView
                    android:id="@+id/tvRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/rate"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:padding="7dp"
                    android:background="#57D348"
                    android:layout_alignParentRight="true" />
        </RelativeLayout>

        <TextView
                android:id="@+id/tvnamaresto"
                android:text="@string/nama_menu"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/tvAlamat"
                android:text="@string/tempat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/tvType"
                android:text="@string/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/tvHarga"
                android:text="@string/harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>