<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ImageView
            android:id="@+id/ivResto"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            android:background="@color/colorGray"/>
    <TextView
            android:id="@+id/tvRate"
            android:layout_below="@id/ivResto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="#fff"
            android:text="@string/rate"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:padding="3dp"
            android:background="#57D348"/>

    <LinearLayout
            android:layout_below="@+id/ivResto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:id="@+id/tvnamaresto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_resto"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="3dp"/>
        <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tempat"/>
        <TextView
                android:id="@+id/tvjambuka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/buka_besok_pada_5_30_am"/>

    </LinearLayout>
</RelativeLayout>