<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:cardElevation="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:paddingHorizontal="5dp">

        <ImageView
                android:id="@+id/ivkategori"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:scaleType="fitXY"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/kategori"
                    android:id="@+id/tvkategori"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:id="@+id/tvjumlahoutlet"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah_outlet_jumlah_disimpan"/>

            <TextView
                    android:id="@+id/tvdeskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorBlack"
                    android:text="@string/deskripsi"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

