<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/htab_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/htab_collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:titleEnabled="false">

            <android.support.v7.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="7dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/ivdetailkategori"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/colorGray"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvkategori"
                            android:text="@string/kategori"
                            android:textSize="15sp"
                            android:textColor="@color/colorBlack"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvjumlahoutlet"
                            android:text="@string/jumlah_outlet_jumlah_disimpan"
                            android:textSize="12sp"
                            android:textColor="@color/colorGrayDark"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvdeskripsi"
                            android:text="@string/deskripsi"
                            android:textColor="@color/colorGrayDark"
                            android:textSize="12sp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                    />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_gv_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v7.widget.RecyclerView>


</android.support.design.widget.CoordinatorLayout>